# configkit

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
src/configkit/: __init__.py  core.py
tests/: test_main.py  type_check_examples.py
